// Copyright (c) 2019 Temporal Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package adminservice.v1;
option go_package = "github.com/temporalio/temporal/.gen/proto/adminservice/v1;adminservice";

import "enums/v1/common.proto";
import "common/v1/message.proto";
import "version/v1/message.proto";

import "cluster/v1/server_message.proto";
import "enums/v1/server_common.proto";
import "namespace/v1/server_message.proto";
import "history/v1/server_message.proto";
import "replication/v1/server_message.proto";

message DescribeWorkflowExecutionRequest {
    string namespace = 1;
    common.v1.WorkflowExecution execution = 2;
}

message DescribeWorkflowExecutionResponse {
    string shardId = 1;
    string historyAddr = 2;
    string mutableStateInCache = 3;
    string mutableStateInDatabase = 4;
}

//At least one of the parameters needs to be provided
message DescribeHistoryHostRequest {
    //ip:port
    string hostAddress = 1;
    int32 shardIdForHost = 2;
    common.v1.WorkflowExecution executionForHost = 3;
}

message DescribeHistoryHostResponse {
    int32 numberOfShards = 1;
    repeated int32
    shardIds = 2;
    namespace.v1.NamespaceCacheInfo namespaceCache = 3;
    string shardControllerStatus = 4;
    string address = 5;
}

message CloseShardRequest {
    int32 shardId = 1;
}

message CloseShardResponse {
}

message RemoveTaskRequest {
    int32 shardId = 1;
    enums.v1.TaskCategory category = 2;
    int64 taskId = 3;
    int64 visibilityTimestamp = 4;
}

message RemoveTaskResponse {
}

message GetWorkflowExecutionRawHistoryRequest {
    string namespace = 1;
    common.v1.WorkflowExecution execution = 2;
    int64 firstEventId = 3;
    int64 nextEventId = 4;
    int32 maximumPageSize = 5;
    bytes nextPageToken = 6;
}

message GetWorkflowExecutionRawHistoryResponse {
    bytes nextPageToken = 1;
    repeated common.v1.DataBlob historyBatches = 2;
    map<string, replication.v1.ReplicationInfo> replicationInfo = 3;
    int32 eventStoreVersion = 4;
}

/**
  * StartEventId defines the beginning of the event to fetch. The first event is exclusive.
  * EndEventId and EndEventVersion defines the end of the event to fetch. The end event is exclusive.
  **/
message GetWorkflowExecutionRawHistoryV2Request {
    string namespace = 1;
    common.v1.WorkflowExecution execution = 2;
    int64 startEventId = 3;
    int64 startEventVersion = 4;
    int64 endEventId = 5;
    int64 endEventVersion = 6;
    int32 maximumPageSize = 7;
    bytes nextPageToken = 8;
}

message GetWorkflowExecutionRawHistoryV2Response {
    bytes nextPageToken = 1;
    repeated common.v1.DataBlob historyBatches = 2;
    history.v1.VersionHistory versionHistory = 3;
}

message GetReplicationMessagesRequest {
    repeated replication.v1.ReplicationToken tokens = 1;
    string clusterName = 2;
}

message GetReplicationMessagesResponse {
    map<int32, replication.v1.ReplicationMessages> messagesByShard = 1;
}

message GetNamespaceReplicationMessagesRequest {
    // lastRetrievedMessageId is where the next fetch should begin with.
    int64 lastRetrievedMessageId = 1;
    // lastProcessedMessageId is the last messageId that is processed on the passive side.
    // This can be different than lastRetrievedMessageId if passive side supports prefetching messages.
    int64 lastProcessedMessageId = 2;
    // clusterName is the name of the pulling cluster.
    string clusterName = 3;
}

message GetNamespaceReplicationMessagesResponse {
    replication.v1.ReplicationMessages messages = 1;
}

message GetDLQReplicationMessagesRequest {
    repeated replication.v1.ReplicationTaskInfo taskInfos = 1;
}

message GetDLQReplicationMessagesResponse {
    repeated replication.v1.ReplicationTask replicationTasks = 1;
}

// ReapplyEventsRequest is the request for reapply events API.
message ReapplyEventsRequest {
    string namespace = 1;
    common.v1.WorkflowExecution workflowExecution = 2;
    common.v1.DataBlob events = 3;
}

message ReapplyEventsResponse {
}

message AddSearchAttributeRequest {
    map<string, enums.v1.IndexedValueType> searchAttribute = 1;
    string securityToken = 2;
}

message AddSearchAttributeResponse {
}

message DescribeClusterRequest {
}

message DescribeClusterResponse {
    version.v1.SupportedClientVersions supportedClientVersions = 1;
    cluster.v1.MembershipInfo membershipInfo = 2;
}

message ReadDLQMessagesRequest {
    enums.v1.DeadLetterQueueType type = 1;
    int32 shardId = 2;
    string sourceCluster = 3;
    int64 inclusiveEndMessageId = 4;
    int32 maximumPageSize = 5;
    bytes nextPageToken = 6;
}

message ReadDLQMessagesResponse {
    enums.v1.DeadLetterQueueType type = 1;
    repeated replication.v1.ReplicationTask replicationTasks = 2;
    bytes nextPageToken = 3;
}

message PurgeDLQMessagesRequest {
    enums.v1.DeadLetterQueueType type = 1;
    int32 shardId = 2;
    string sourceCluster = 3;
    int64 inclusiveEndMessageId = 4;
}

message PurgeDLQMessagesResponse {
}

message MergeDLQMessagesRequest {
    enums.v1.DeadLetterQueueType type = 1;
    int32 shardId = 2;
    string sourceCluster = 3;
    int64 inclusiveEndMessageId = 4;
    int32 maximumPageSize = 5;
    bytes nextPageToken = 6;
}

message MergeDLQMessagesResponse {
    bytes nextPageToken = 1;
}

message RefreshWorkflowTasksRequest {
    string namespace = 1;
    common.v1.WorkflowExecution execution = 2;
}

message RefreshWorkflowTasksResponse {
}
